# websocket_client

./: .gn  BUILD.gn  COMPLETION_SUMMARY.md  DEPS.json  FINAL_PROJECT_STATUS.md  README.md  VIDEO_SUBMISSION_SCRIPT.txt  debug_cli.cpp  debug_cli_test.cpp  sync_deps.sh  test_output.xml  test_results.xml  trace.json
src/: cli_handler.cpp  cli_handler.hpp  main.cpp  message_handler.cpp  message_handler.hpp  websocket_client.cpp  websocket_client.hpp  websocket_client_plain.cpp  websocket_client_plain.hpp
test/: cli_handler_test.cpp  message_handler_test.cpp  websocket_client_plain_test.cpp  websocket_client_test.cpp
